Fix Vercel Deployment Configuration

--- a/vercel.json
+++ b/vercel.json
@@ -23,5 +23,9 @@
         }
       ]
     }
-  ]
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "framework": "vite"
 }
